@@ -7,6 +7,8 @@ FEATURE: UI   | Added "Column Setup" icon to the iconbar [amc1]
 
 CHANGE: Core  | Improved handling of mixed IPv4 and IPv6 bindings [The 8472]
 CHANGE: UI    | The comment icon column now displays a blank icon if there is no comment (rather than no icon) [amc1]
+CHANGE: Plug  | Essential plugins are now automatically re-enabled if previously disabled by user [amc1]
+                 - the "Start / Stop Rules" plugin was disabled by users in the past, this was causing torrents to be stuck in "waiting" state
 CHANGE: Plug  | Client ID plugin is removed [amc1]
 
 BUGFIX: Core  | Fixed DND deleting files in single-file torrents [The 8472]
